wp-content/themes/bars2013/style.css
/*
Theme Name:     bars2013
Theme URI:      http://example.com/
Description:    Buenos Aires Rojo Sangre - Festival Internacional de Cine de Terror, Fantástico y Bizarro
Version:        1.0
Author:         Andrés Mata Suárez
Author URI:		mailto:author@bars.com
*/

@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
@import url(http://fonts.googleapis.com/css?family=Open+Sans);
@import url(http://fonts.googleapis.com/css?family=Lora);

@import url("../bars2013/css/links.css");
@import url("../bars2013/css/text.css");
@import url("../bars2013/css/sponsors.css");
@import url("../bars2013/css/ribbon.css");
@import url("../bars2013/css/contact.css");

/* Utils */
.scratch { opacity: 0.4; height: 1px; background-image: url("images/scratch.png"); }
.clear { clear: both; }
.relative { position: relative; }
.overflow-hidden { overflow: hidden; }
.hidden-movie-container { display: none; }

ul.checkmark { list-style: none; list-style-position: outside;  }
ul.checkmark li:before { content: '✔'; margin-left: -1.6em; margin-right: 0.6em; }

.subtle-shadow-top { box-shadow: 0 -2px 2px 1px black; -webkit-box-shadow: 0 -2px 2px 1px black; -moz-box-shadow: 0 -2px 2px 1px black; }
.subtle-shadow-bottom { box-shadow: 0 2px 2px 1px black; -webkit-box-shadow: 0 2px 2px 1px black; -moz-box-shadow: 0 2px 2px 1px black; }
.arrow-right { width: 0; height: 0; border-top: 8px solid transparent; border-bottom: 8px solid transparent; border-left: 8px solid white; }
.arrow-down { width: 0; height: 0; border-top: 8px solid white; border-right: 8px solid transparent; border-left: 8px solid transparent; }

body { margin: 0; background: url("images/bgpattern2.png"); }

/* Header */
#header { background: black; overflow: hidden; }
#header-container { padding-top: 15px; background: url("images/logo_bg.png") no-repeat; background-position: center 120px; background-attachment: fixed; }
#header-image:hover { cursor: pointer; }
#header-image { margin: 6px auto 0 auto; width: 350px; height: 119px; background-image: url("images/header-img.png"); }
#header-clouds { height: 31px; width: 100%; background-image: url("images/scratchs_2.png"); }
#header-social { text-align: center; }
#header-social div { display: inline-block; padding: 0; width: 33px; background-repeat: no-repeat; }
#bars-header-social-facebook,
#bars-header-social-youtube { height: 32px; }
#bars-header-social-twitter { height: 33px; }
#bars-header-social-facebook { background-image: url("images/facebook-gray.png"); }
#bars-header-social-twitter { background-image: url("images/twitter-gray.png"); }
#bars-header-social-youtube { background-image: url("images/youtube-gray.png"); }
#bars-header-social-facebook:hover { background-image: url("images/facebook.png"); }
#bars-header-social-twitter:hover { background-image: url("images/twitter.png"); }
#bars-header-social-youtube:hover { background-image: url("images/youtube.png"); }

/* Header menu */
#header-menu { position: relative; background-color: black; text-align: center; }
#header-menu .nav-menu ul { position: relative; left: 50%; margin: 0; padding: 0; }
#header-menu .nav-menu ul li { display: table-cell !important; position: relative; right: 50%; vertical-align: middle; padding: 8px; }

/* Sticky menu fix */
#header-menu { z-index: 99; width: 100%; }

/* Main container */
#main { background: url("images/bgpattern2.png"); }
#main-logo-bg { background: url("images/logo_bg.png") no-repeat; background-position: center 120px; background-attachment: fixed; overflow: hidden; background-color: rgba(10,0,0,0.4); }
#main-table { margin: 0 auto; border-collapse: collapse; }
#main-table tbody { vertical-align: top; }
#main-container { width: 1020px; }
#content { width: 670px; padding: 0; background: rgba(0,0,0,0.6); }

/* General */
.page-header { padding: 20px 40px; }
.page { padding-bottom: 50px; }
#page-call.page { padding-bottom: 0; }
#page-single.page { padding-top: 20px; }
#page-call .page-header { padding-top: 30px; background: #110000; }
#page-selection .page-header { padding-top: 30px; background: #110000; }

/* Footer */
#footer { overflow: hidden; text-align: center; background: rgba(0,0,0,0.6); }
#footer-container { width: 955px; margin: 0 auto; padding: 10px 20px; }
#footer .footer-nav { overflow: hidden; }
#footer .footer-logos { overflow: hidden; position: relative; }
#footer .footer-logos .bars-image { margin: 0 auto; background: url("images/footer/footer_logo.png"); width: 276px; height: 53px; }
#footer .footer-logos .fs-image { position: absolute; right: 0; top: 0; width: 112px; height: 53px; background: url("images/footer/footer_festeringslime_gray.png"); }
#footer .footer-logos .fs-image:hover { background-image: url("images/footer/footer_festeringslime.png"); }
#footer .searchform { width: 340px; margin: 0 auto 30px auto; float: right; }
#footer .searchform  input[type=text] { width: 250px; height: 10px; padding: 10px 5px; }
#footer .searchform  input[type=submit] { width: 80px; height: 30px; }

/* Widget */
.bars-widget { border: 1px solid rgba(255,255,255,0.1); overflow: hidden; }
.bars-widget-header { overflow: hidden; padding: 3px 0px 3px 3px; z-index: 10; width: 100%; background-color: rgba(0,0,0,0.95); }
.bars-widget.relative .bars-widget-header { position: absolute; top: 0; }
.bars-widget-title { float: left; margin-top: -1px; }
.bars-widget-logo { float: left; margin-right: 5px; width: 29px; height: 29px; background: url("images/loguito.png") no-repeat 0 0; }

/* Sidebar */
#sidebar-container { width: 280px; padding: 0 10px 10px 10px; overflow: hidden; }
#sidebar-container .bars-widget.sidebar { margin-top: 5px; margin-bottom: 15px; }

/* Sidebar image crop widget */
.bars-widget.sidebar.image { cursor: pointer; }

/* Sponsors (sponsors.php) */
#page-sponsors .page-header { background: none; }

/* News (news.php) */
#page-news .posts { padding: 20px 0; }

/* Festival (festival.php) */
#page-festival .festival-history { padding: 10px 40px; }
/* ... */

